<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.WeatherDetailActivity">

    <ProgressBar
        android:id="@+id/progress_details"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="5dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50121653"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/min_temp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

    <TextView
        android:id="@+id/tv_temp_min_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_min_temp"
        app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_min_temp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/max_temp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_min_temp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_min_temp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_temp_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temp_max"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_max"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_max"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/updated"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_min_temp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_min_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_temp" />

    <TextView
        android:id="@+id/tv_last_updated_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_last_updated"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp_min_value"
        app:layout_constraintStart_toStartOf="@+id/tv_temp_min_value"
        app:layout_constraintTop_toTopOf="@+id/tv_last_updated"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/humidity"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_last_updated"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_last_updated"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_updated" />

    <TextView
        android:id="@+id/tv_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_humidity"
        app:layout_constraintEnd_toEndOf="@+id/tv_last_updated_value"
        app:layout_constraintStart_toStartOf="@+id/tv_last_updated_value"
        app:layout_constraintTop_toTopOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind_speed"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity_value"
        app:layout_constraintTop_toTopOf="@+id/tv_wind_speed"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed_value"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="@+id/img_refresh"
        app:layout_constraintStart_toStartOf="@+id/img_refresh"
        app:layout_constraintTop_toBottomOf="@+id/img_refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>